feat. 백엔드 개발자

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="profile-section">
                 <div class="profile-info">
                     <h1 class="name">김현승</h1>
-                    <p class="title">프론트엔드 개발자</p>
+                    <p class="title">백엔드 개발자</p>
                 </div>
             </div>
             <div class="contact-info">
